I added custom font and colors

--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="output.css">
   
   <title>Frontend Mentor | Single-page developer portfolio</title>
 </head>
-<body>
+<body class="font-Space_Grotesk bg-dark_black text-pure_white flex flex-col justify-center items-center m-auto sm:h-screen">
 
   adamkeyes
 
