I started to create the HTML structure

--- a/src/index.html
+++ b/src/index.html
@@ -8,84 +8,101 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="output.css">
+  <script src="script.js" defer></script>
   
   <title>Frontend Mentor | Single-page developer portfolio</title>
 </head>
 <body class="font-Space_Grotesk bg-dark_black text-pure_white flex flex-col justify-center items-center m-auto sm:h-screen">
 
-  adamkeyes
+  <header>
+    <div>
+      <h1>adamkeyes</h1>
+      <div>
+        <img src="../src/assets/images/icon-github.svg" alt="Icon GitHub">
+        <img src="../src/assets/images/icon-frontend-mentor.svg" alt="Icon Frontend-Mentor">
+        <img src="../src/assets/images/icon-linkedin.svg" alt="Icon LinkedIn">
+        <img src="../src/assets/images/icon-twitter.svg" alt="Icon Twitter">
+      </div>
+    </div>
+    <h2>Nice to meet you! I'm Adam Keyes.</h2>
+    <p>
+      Based in the UK, I'm a front-end developer passionate about
+      building accessible web apps that users love.
+    </p>
+    <a href="#">Contact me</a>
+  </header>
 
-  Nice to meet you! I'm Adam Keyes.
+  <main>
+    <section>
+      <div>
+        <h2>HTML</h2>
+        <p>4 Years Experience</p>
+      </div>
+      <div>
+        <h2>CSS</h2>
+        <p>4 Years Experience</p>
+      </div>
+      <div>
+        <h2>JavaScript</h2>
+        <p>4 Years Experience</p>
+      </div>
+      <div>
+        <h2>Accessibility</h2>
+        <p>4 Years Experience</p>
+      </div>
+      <div>
+        <h2>React</h2>
+        <p>3 Years Experience</p>
+      </div>
+      <div>
+        <h2>Sass</h2>
+        <p>3 Years Experience</p>
+      </div>
+    </section>
 
-  Based in the UK, I'm a front-end developer passionate about 
-  building accessible web apps that users love.
+    <section>
+      <h2>Projects</h2>
+      Contact me
+      Design portfolio
+      HTML CSS
+      View project
+      View code
+      E-learning landing page
+      HTML CSS
+      View project
+      View code
+      Todo web app
+      HTML CSS JavaScript
+      View project
+      View code
+      Entertainment web app
+      HTML CSS JavaScript
+      View project
+      View code
+      Memory Game
+      HTML CSS JavaScript
+      View project
+      View code
+      Art gallery showcase
+      HTML CSS JavaScript
+      View project
+      View code
+    </section>
 
-  Contact me
+    <section>
+      Contact
+      I would love to hear about your project and how I could help. Please
+      fill in the form, and I’ll get back to you as soon as possible.
+      Name
+      Email
+      Message
+      Send message
+    </section>
+  </main>
 
-  HTML
-  4 Years Experience
-
-  CSS
-  4 Years Experience
-
-  JavaScript
-  4 Years Experience
-
-  Accessibility
-  4 Years Experience
-
-  React
-  3 Years Experience
-
-  Sass
-  3 Years Experience
-
-  Projects
-
-  Contact me
-
-  Design portfolio
-  HTML CSS
-  View project
-  View code
-
-  E-learning landing page
-  HTML CSS
-  View project
-  View code
-
-  Todo web app
-  HTML CSS JavaScript
-  View project
-  View code
-
-  Entertainment web app
-  HTML CSS JavaScript
-  View project
-  View code
-
-  Memory Game
-  HTML CSS JavaScript
-  View project
-  View code
-
-  Art gallery showcase
-  HTML CSS JavaScript
-  View project
-  View code
-
-  Contact
-
-  I would love to hear about your project and how I could help. Please 
-  fill in the form, and I’ll get back to you as soon as possible.
-
-  Name
-  Email
-  Message
-
-  Send message
-
-  adamkeyes
+  <footer>
+    adamkeyes
+  </footer>
 
 </body>
 </html>
