Making the HTML structure

--- a/src/index.html
+++ b/src/index.html
@@ -61,47 +61,83 @@
     </section>
 
     <section>
-      <h2>Projects</h2>
-      Contact me
-      Design portfolio
-      HTML CSS
-      View project
-      View code
-      E-learning landing page
-      HTML CSS
-      View project
-      View code
-      Todo web app
-      HTML CSS JavaScript
-      View project
-      View code
-      Entertainment web app
-      HTML CSS JavaScript
-      View project
-      View code
-      Memory Game
-      HTML CSS JavaScript
-      View project
-      View code
-      Art gallery showcase
-      HTML CSS JavaScript
-      View project
-      View code
+      <div>
+        <h2>Projects</h2>
+        <a href="#">Contact me</a>
+      </div>
+      <article>
+        <img class="lg:hidden" src="../src/assets/images/thumbnail-project-1-small.webp" alt="Thumbnail Project">
+        <img class="hidden lg:block" src="../src/assets/images/thumbnail-project-1-large.webp" alt="Thumbnail Project">
+        <h3>Design portfolio</h3>
+        <p>HTML CSS</p>
+        <a href="#">View project</a>
+        <a href="#">View code</a>
+      </article>
+      <article>
+        <img class="lg:hidden" src="../src/assets/images/thumbnail-project-2-small.webp" alt="Thumbnail Project">
+        <img class="hidden lg:block" src="../src/assets/images/thumbnail-project-2-large.webp" alt="Thumbnail Project">
+        <h3>E-learning landing page</h3>
+        <p>HTML CSS</p>
+        <a href="#">View project</a>
+        <a href="#">View code</a>
+      </article>
+      <article>
+        <img class="lg:hidden" src="../src/assets/images/thumbnail-project-3-small.webp" alt="Thumbnail Project">
+        <img class="hidden lg:block" src="../src/assets/images/thumbnail-project-3-large.webp" alt="Thumbnail Project">
+        <h3>Todo web app</h3>
+        <p>HTML CSS JavaScript</p>
+        <a href="#">View project</a>
+        <a href="#">View code</a>
+      </article>
+      <article>
+        <img class="lg:hidden" src="../src/assets/images/thumbnail-project-4-small.webp" alt="Thumbnail Project">
+        <img class="hidden lg:block" src="../src/assets/images/thumbnail-project-4-large.webp" alt="Thumbnail Project">
+        <h3>Entertainment web app</h3>
+        <p>HTML CSS JavaScript</p>
+        <a href="#">View project</a>
+        <a href="#">View code</a>
+      </article>
+      <article>
+        <img class="lg:hidden" src="../src/assets/images/thumbnail-project-5-small.webp" alt="Thumbnail Project">
+        <img class="hidden lg:block" src="../src/assets/images/thumbnail-project-5-large.webp" alt="Thumbnail Project">
+        <h3>Memory Game</h3>
+        <p>HTML CSS JavaScript</p>
+        <a href="#">View project</a>
+        <a href="#">View code</a>
+      </article>
+      <article>
+        <img class="lg:hidden" src="../src/assets/images/thumbnail-project-6-small.webp" alt="Thumbnail Project">
+        <img class="hidden lg:block" src="../src/assets/images/thumbnail-project-6-large.webp" alt="Thumbnail Project">
+        <h3>Art gallery showcase</h3>
+        <p>HTML CSS JavaScript</p>
+        <a href="#">View project</a>
+        <a href="#">View code</a>
+      </article>
     </section>
 
     <section>
-      Contact
-      I would love to hear about your project and how I could help. Please
-      fill in the form, and I’ll get back to you as soon as possible.
-      Name
-      Email
-      Message
-      Send message
+      <h2>Contact</h2>
+      <p>
+        I would love to hear about your project and how I could help. Please
+        fill in the form, and I’ll get back to you as soon as possible.
+      </p>
+      <form>
+        <input type="text" name="name" id="name" placeholder="Name" required>
+        <input type="email" name="email" id="email" placeholder="Email" required>
+        <textarea name="text" id="text" cols="30" rows="10" placeholder="Message"></textarea>
+        <button id="btnSubmit" type="submit">Send message</button>
+      </form>
     </section>
   </main>
 
   <footer>
-    adamkeyes
+    <h1>adamkeyes</h1>
+    <div>
+      <img src="../src/assets/images/icon-github.svg" alt="Icon GitHub">
+      <img src="../src/assets/images/icon-frontend-mentor.svg" alt="Icon Frontend-Mentor">
+      <img src="../src/assets/images/icon-linkedin.svg" alt="Icon LinkedIn">
+      <img src="../src/assets/images/icon-twitter.svg" alt="Icon Twitter">
+    </div>
   </footer>
 
 </body>
