--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   
   <title>Frontend Mentor | Single-page developer portfolio</title>
 </head>
-<body class="font-Space_Grotesk bg-dark_black text-pure_white flex flex-col justify-center items-center m-auto sm:h-screen">
+<body class="font-Space_Grotesk bg-dark_black text-pure_white flex flex-col justify-center items-center m-auto">
 
   <header>
     <div>
@@ -22,6 +22,11 @@
         <img src="../src/assets/images/icon-frontend-mentor.svg" alt="Icon Frontend-Mentor">
         <img src="../src/assets/images/icon-linkedin.svg" alt="Icon LinkedIn">
         <img src="../src/assets/images/icon-twitter.svg" alt="Icon Twitter">
+      </div>
+      <div>
+        <img class="md:hidden xl:hidden" src="../src/assets/images/image-profile-mobile.webp" alt="Adam Keyes">
+        <img class="hidden md:block xl:hidden" src="../src/assets/images/image-profile-tablet.webp" alt="Adam Keyes">
+        <img class="hidden md:hidden xl:block" src="../src/assets/images/image-profile-desktop.webp" alt="Adam Keyes">
       </div>
     </div>
     <h2>Nice to meet you! I'm Adam Keyes.</h2>
