--- a/src/index.html
+++ b/src/index.html
@@ -14,10 +14,10 @@
 </head>
 <body class="font-Space_Grotesk bg-dark_black text-pure_white flex flex-col justify-center items-center m-auto">
 
-  <header>
-    <div>
+  <header class="flex flex-col justify-center items-center m-auto">
+    <div class="flex flex-col justify-center items-center m-auto w-[90%]">
       <h1>adamkeyes</h1>
-      <div>
+      <div class="flex justify-between gap-6 items-center w-full">
         <img src="../src/assets/images/icon-github.svg" alt="Icon GitHub">
         <img src="../src/assets/images/icon-frontend-mentor.svg" alt="Icon Frontend-Mentor">
         <img src="../src/assets/images/icon-linkedin.svg" alt="Icon LinkedIn">
