Working on mobile version styles

--- a/src/index.html
+++ b/src/index.html
@@ -15,26 +15,28 @@
 <body class="font-Space_Grotesk bg-dark_black text-pure_white flex flex-col justify-center items-center m-auto">
 
   <header class="flex flex-col justify-center items-center m-auto">
-    <div class="flex flex-col justify-center items-center m-auto w-[90%]">
-      <h1>adamkeyes</h1>
-      <div class="flex justify-between gap-6 items-center w-full">
+    <div class="flex flex-col justify-center items-center m-auto w-[47%] relative">
+      <h1 class="font-bold text-2xl px-3 py-5">adamkeyes</h1>
+      <div class="flex justify-between gap-6 items-center w-full px-2.5">
         <img src="../src/assets/images/icon-github.svg" alt="Icon GitHub">
         <img src="../src/assets/images/icon-frontend-mentor.svg" alt="Icon Frontend-Mentor">
         <img src="../src/assets/images/icon-linkedin.svg" alt="Icon LinkedIn">
         <img src="../src/assets/images/icon-twitter.svg" alt="Icon Twitter">
       </div>
       <div>
-        <img class="md:hidden xl:hidden" src="../src/assets/images/image-profile-mobile.webp" alt="Adam Keyes">
+        <img class="md:hidden xl:hidden absolute top-0 left-1/2 translate-x-[-50%]" src="../src/assets/images/image-profile-mobile.webp" alt="Adam Keyes">
         <img class="hidden md:block xl:hidden" src="../src/assets/images/image-profile-tablet.webp" alt="Adam Keyes">
         <img class="hidden md:hidden xl:block" src="../src/assets/images/image-profile-desktop.webp" alt="Adam Keyes">
       </div>
     </div>
-    <h2>Nice to meet you! I'm Adam Keyes.</h2>
-    <p>
-      Based in the UK, I'm a front-end developer passionate about
-      building accessible web apps that users love.
-    </p>
-    <a href="#">Contact me</a>
+    <div class="mt-[383px]">
+      <h2>Nice to meet you! I'm Adam Keyes.</h2>
+      <p>
+        Based in the UK, I'm a front-end developer passionate about
+        building accessible web apps that users love.
+      </p>
+      <a href="#">Contact me</a>
+    </div>
   </header>
 
   <main>
