--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,15 @@
         <img class="hidden md:hidden xl:block" src="../src/assets/images/image-profile-desktop.webp" alt="Adam Keyes">
       </div>
     </div>
+
+    <div>
+      <img src="../src/assets/images/pattern-rings.svg" alt="Pattern Rings">
+    </div>
+
+    <div>
+      <img src="../src/assets/images/pattern-circle.svg" alt="Pattern Circle">
+    </div>
+
     <div class="mt-[383px]">
       <h2>Nice to meet you! I'm Adam Keyes.</h2>
       <p>
@@ -37,6 +46,7 @@
       </p>
       <a href="#">Contact me</a>
     </div>
+
   </header>
 
   <main>
