Working on mobile version styles

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 </head>
 <body class="font-Space_Grotesk bg-dark_black text-pure_white flex flex-col justify-center items-center m-auto">
 
-  <header class="flex flex-col justify-center items-center m-auto">
+  <header class="flex flex-col justify-center items-center m-auto relative">
     <div class="flex flex-col justify-center items-center m-auto w-[47%] relative">
       <h1 class="font-bold text-2xl px-3 py-5">adamkeyes</h1>
       <div class="flex justify-between gap-6 items-center w-full px-2.5">
@@ -31,11 +31,11 @@
     </div>
 
     <div>
-      <img src="../src/assets/images/pattern-rings.svg" alt="Pattern Rings">
+      <img class="absolute left-[-50%] top-32" src="../src/assets/images/pattern-rings.svg" alt="Pattern Rings">
     </div>
 
     <div>
-      <img src="../src/assets/images/pattern-circle.svg" alt="Pattern Circle">
+      <img class="absolute" src="../src/assets/images/pattern-circle.svg" alt="Pattern Circle">
     </div>
 
     <div class="mt-[383px]">
