--- a/src/index.html
+++ b/src/index.html
@@ -23,19 +23,19 @@
         <img src="../src/assets/images/icon-linkedin.svg" alt="Icon LinkedIn">
         <img src="../src/assets/images/icon-twitter.svg" alt="Icon Twitter">
       </div>
-      <div>
-        <img class="md:hidden xl:hidden absolute top-0 left-1/2 translate-x-[-50%]" src="../src/assets/images/image-profile-mobile.webp" alt="Adam Keyes">
+      <div class="z-20">
+        <img class="md:hidden xl:hidden absolute top-0 left-1/2 translate-x-[-50%] z-20" src="../src/assets/images/image-profile-mobile.webp" alt="Adam Keyes">
         <img class="hidden md:block xl:hidden" src="../src/assets/images/image-profile-tablet.webp" alt="Adam Keyes">
         <img class="hidden md:hidden xl:block" src="../src/assets/images/image-profile-desktop.webp" alt="Adam Keyes">
       </div>
     </div>
 
     <div>
-      <img class="absolute left-[-50%] top-32" src="../src/assets/images/pattern-rings.svg" alt="Pattern Rings">
+      <img class="absolute left-[-50%] top-32 z-10" src="../src/assets/images/pattern-rings.svg" alt="Pattern Rings">
     </div>
 
     <div>
-      <img class="absolute" src="../src/assets/images/pattern-circle.svg" alt="Pattern Circle">
+      <img class="absolute bottom-[36%] right-[-20%] overflow-x-hidden" src="../src/assets/images/pattern-circle.svg" alt="Pattern Circle">
     </div>
 
     <div class="mt-[383px]">
