--- a/src/index.html
+++ b/src/index.html
@@ -35,11 +35,11 @@
     </div>
 
     <div>
-      <img class="absolute bottom-[36%] right-[-20%] overflow-x-hidden" src="../src/assets/images/pattern-circle.svg" alt="Pattern Circle">
+      <img class="absolute bottom-[38%] right-[-20%] overflow-x-hidden" src="../src/assets/images/pattern-circle.svg" alt="Pattern Circle">
     </div>
 
-    <div class="mt-[383px]">
-      <h2>Nice to meet you! I'm Adam Keyes.</h2>
+    <div class="mt-[300px]">
+      <h2 class="px-4 font-bold text-center text-[40px] pt-10">Nice to meet you! I'm Adam Keyes.</h2>
       <p>
         Based in the UK, I'm a front-end developer passionate about
         building accessible web apps that users love.
