Working on mobile version header

--- a/src/index.html
+++ b/src/index.html
@@ -35,21 +35,24 @@
     </div>
 
     <div>
-      <img class="absolute bottom-[38%] right-[-20%] overflow-x-hidden" src="../src/assets/images/pattern-circle.svg" alt="Pattern Circle">
+      <img class="absolute bottom-[40%] right-[-20%] overflow-x-hidden" src="../src/assets/images/pattern-circle.svg" alt="Pattern Circle">
     </div>
 
     <div class="mt-[300px]">
-      <h2 class="px-4 font-bold text-center text-[40px] pt-10">Nice to meet you! I'm Adam Keyes.</h2>
-      <p>
+      <h2 class="px-4 pt-10 pb-6 font-bold text-center text-[40px] leading-[40px] tracking-[-1.14px]">Nice to meet you! I'm Adam Keyes.</h2>
+      <p class="px-4 pb-6 text-center leading-[26px]">
         Based in the UK, I'm a front-end developer passionate about
         building accessible web apps that users love.
       </p>
-      <a href="#">Contact me</a>
+      <div class="flex justify-center">
+        <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green">Contact me</button>
+      </div>
     </div>
 
   </header>
 
-  <main>
+  <main class="mt-[90px]">
+    <hr>
     <section>
       <div>
         <h2>HTML</h2>
