Working on mobile version styles

--- a/src/index.html
+++ b/src/index.html
@@ -39,44 +39,43 @@
     </div>
 
     <div class="mt-[300px]">
-      <h2 class="px-4 pt-10 pb-6 font-bold text-center text-[40px] leading-[40px] tracking-[-1.14px]">Nice to meet you! I'm Adam Keyes.</h2>
+      <h2 class="px-4 pt-10 pb-6 font-bold text-center text-[40px] leading-[40px] tracking-[-1.14px]">Nice to meet you! I'm <span class="border-b-4 border-neon_green">Adam Keyes</span>.</h2>
       <p class="px-4 pb-6 text-center leading-[26px]">
         Based in the UK, I'm a front-end developer passionate about
         building accessible web apps that users love.
       </p>
       <div class="flex justify-center">
-        <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green">Contact me</button>
+        <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green">Contact me</button>
       </div>
     </div>
 
   </header>
 
-  <main class="mt-[90px]">
-    <hr>
-    <section>
-      <div>
-        <h2>HTML</h2>
-        <p>4 Years Experience</p>
+  <main class="mt-[90px] mx-4 border-t-2">
+    <section class="text-center">
+      <div class="pt-10">
+        <h2 class="font-bold text-[32px] leading-[40px] tracking-[-1px]">HTML</h2>
+        <p class="leading-[26px]">4 Years Experience</p>
       </div>
-      <div>
-        <h2>CSS</h2>
-        <p>4 Years Experience</p>
+      <div class="pt-6">
+        <h2 class="font-bold text-[32px] leading-[40px] tracking-[-1px]">CSS</h2>
+        <p class="leading-[26px]">4 Years Experience</p>
       </div>
-      <div>
-        <h2>JavaScript</h2>
-        <p>4 Years Experience</p>
+      <div class="pt-6">
+        <h2 class="font-bold text-[32px] leading-[40px] tracking-[-1px]">JavaScript</h2>
+        <p class="leading-[26px]">4 Years Experience</p>
       </div>
-      <div>
-        <h2>Accessibility</h2>
-        <p>4 Years Experience</p>
+      <div class="pt-6">
+        <h2 class="font-bold text-[32px] leading-[40px] tracking-[-1px]">Accessibility</h2>
+        <p class="leading-[26px]">4 Years Experience</p>
       </div>
-      <div>
-        <h2>React</h2>
-        <p>3 Years Experience</p>
+      <div class="pt-6">
+        <h2 class="font-bold text-[32px] leading-[40px] tracking-[-1px]">React</h2>
+        <p class="leading-[26px]">3 Years Experience</p>
       </div>
-      <div>
-        <h2>Sass</h2>
-        <p>3 Years Experience</p>
+      <div class="pt-6">
+        <h2 class="font-bold text-[32px] leading-[40px] tracking-[-1px]">Sass</h2>
+        <p class="leading-[26px] pb-10 border-b-2">3 Years Experience</p>
       </div>
     </section>
 
