--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
         building accessible web apps that users love.
       </p>
       <div class="flex justify-center">
-        <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green">Contact me</button>
+        <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">Contact me</button>
       </div>
     </div>
 
@@ -79,10 +79,18 @@
       </div>
     </section>
 
-    <section>
-      <div>
-        <h2>Projects</h2>
-        <a href="#">Contact me</a>
+    <div class="relative">
+      <img class="absolute right-[-50%] top-[-50px] z-10" src="../src/assets/images/pattern-rings.svg" alt="Pattern Rings">
+    </div>
+
+    <section class="mt-14">
+      <div class="flex justify-between px-4 pb-10">
+        <div>
+          <h2 class="font-bold text-center text-[40px] leading-[40px] tracking-[-1.14px]">Projects</h2>
+        </div>
+        <div class="flex justify-center">
+          <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">Contact me</button>
+        </div>
       </div>
       <article>
         <img class="lg:hidden" src="../src/assets/images/thumbnail-project-1-small.webp" alt="Thumbnail Project">
