Working on mobile version

--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,7 @@
     </div>
 
     <section class="mt-14">
-      <div class="flex justify-between px-4 pb-10">
+      <div class="flex justify-between pb-10">
         <div>
           <h2 class="font-bold text-center text-[40px] leading-[40px] tracking-[-1.14px]">Projects</h2>
         </div>
@@ -95,50 +95,84 @@
       <article>
         <img class="lg:hidden" src="../src/assets/images/thumbnail-project-1-small.webp" alt="Thumbnail Project">
         <img class="hidden lg:block" src="../src/assets/images/thumbnail-project-1-large.webp" alt="Thumbnail Project">
-        <h3>Design portfolio</h3>
-        <p>HTML CSS</p>
-        <a href="#">View project</a>
-        <a href="#">View code</a>
+        <h3 class="uppercase font-bold text-2xl leading-[32px] mt-5">Design portfolio</h3>
+        <div class="flex gap-[18px] text-lg leading-[28px] uppercase">
+          <p>HTML</p>
+          <p>CSS</p>
+        </div>
+        <div class="pt-5 pb-10 flex justify-start gap-[30px]">
+          <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Project</button>
+          <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Code</button>
+        </div>
       </article>
       <article>
         <img class="lg:hidden" src="../src/assets/images/thumbnail-project-2-small.webp" alt="Thumbnail Project">
         <img class="hidden lg:block" src="../src/assets/images/thumbnail-project-2-large.webp" alt="Thumbnail Project">
-        <h3>E-learning landing page</h3>
-        <p>HTML CSS</p>
-        <a href="#">View project</a>
-        <a href="#">View code</a>
+        <h3 class="uppercase font-bold text-2xl leading-[32px] mt-5">E-learning landing page</h3>
+        <div class="flex gap-[18px] text-lg leading-[28px] uppercase">
+          <p>HTML</p>
+          <p>CSS</p>
+        </div>
+        <div class="pt-5 pb-10 flex justify-start gap-[30px]">
+          <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Project</button>
+          <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Code</button>
+        </div>
       </article>
       <article>
         <img class="lg:hidden" src="../src/assets/images/thumbnail-project-3-small.webp" alt="Thumbnail Project">
         <img class="hidden lg:block" src="../src/assets/images/thumbnail-project-3-large.webp" alt="Thumbnail Project">
-        <h3>Todo web app</h3>
-        <p>HTML CSS JavaScript</p>
-        <a href="#">View project</a>
-        <a href="#">View code</a>
+        <h3 class="uppercase font-bold text-2xl leading-[32px] mt-5">Todo web app</h3>
+        <div class="flex gap-[18px] text-lg leading-[28px] uppercase">
+          <p>HTML</p>
+          <p>CSS</p>
+          <p>JavaScript</p>
+        </div>
+        <div class="pt-5 pb-10 flex justify-start gap-[30px]">
+          <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Project</button>
+          <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Code</button>
+        </div>
       </article>
       <article>
         <img class="lg:hidden" src="../src/assets/images/thumbnail-project-4-small.webp" alt="Thumbnail Project">
         <img class="hidden lg:block" src="../src/assets/images/thumbnail-project-4-large.webp" alt="Thumbnail Project">
-        <h3>Entertainment web app</h3>
-        <p>HTML CSS JavaScript</p>
-        <a href="#">View project</a>
-        <a href="#">View code</a>
+        <h3 class="uppercase font-bold text-2xl leading-[32px] mt-5">Entertainment web app</h3>
+        <div class="flex gap-[18px] text-lg leading-[28px] uppercase">
+          <p>HTML</p>
+          <p>CSS</p>
+          <p>JavaScript</p>
+        </div>
+        <div class="pt-5 pb-10 flex justify-start gap-[30px]">
+          <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Project</button>
+          <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Code</button>
+        </div>
       </article>
       <article>
         <img class="lg:hidden" src="../src/assets/images/thumbnail-project-5-small.webp" alt="Thumbnail Project">
         <img class="hidden lg:block" src="../src/assets/images/thumbnail-project-5-large.webp" alt="Thumbnail Project">
-        <h3>Memory Game</h3>
-        <p>HTML CSS JavaScript</p>
-        <a href="#">View project</a>
-        <a href="#">View code</a>
+        <h3 class="uppercase font-bold text-2xl leading-[32px] mt-5">Memory Game</h3>
+        <div class="flex gap-[18px] text-lg leading-[28px] uppercase">
+          <p>HTML</p>
+          <p>CSS</p>
+          <p>JavaScript</p>
+        </div>
+        <div class="pt-5 pb-10 flex justify-start gap-[30px]">
+          <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Project</button>
+          <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Code</button>
+        </div>
       </article>
       <article>
         <img class="lg:hidden" src="../src/assets/images/thumbnail-project-6-small.webp" alt="Thumbnail Project">
         <img class="hidden lg:block" src="../src/assets/images/thumbnail-project-6-large.webp" alt="Thumbnail Project">
-        <h3>Art gallery showcase</h3>
-        <p>HTML CSS JavaScript</p>
-        <a href="#">View project</a>
-        <a href="#">View code</a>
+        <h3 class="uppercase font-bold text-2xl leading-[32px] mt-5">Art gallery showcase</h3>
+        <div class="flex gap-[18px] text-lg leading-[28px] uppercase">
+          <p>HTML</p>
+          <p>CSS</p>
+          <p>JavaScript</p>
+        </div>
+        <div class="pt-5 pb-10 flex justify-start gap-[30px]">
+          <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Project</button>
+          <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Code</button>
+        </div>
       </article>
     </section>
 
