--- a/src/index.html
+++ b/src/index.html
@@ -175,7 +175,9 @@
         </div>
       </article>
     </section>
+  </main>
 
+  <footer class="bg-dark_gray">
     <section>
       <h2>Contact</h2>
       <p>
@@ -186,19 +188,20 @@
         <input type="text" name="name" id="name" placeholder="Name" required>
         <input type="email" name="email" id="email" placeholder="Email" required>
         <textarea name="text" id="text" cols="30" rows="10" placeholder="Message"></textarea>
-        <button id="btnSubmit" type="submit">Send message</button>
+        <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5" id="btnSubmit" type="submit">Send message</button>
       </form>
     </section>
-  </main>
-
-  <footer>
-    <h1>adamkeyes</h1>
-    <div>
-      <img src="../src/assets/images/icon-github.svg" alt="Icon GitHub">
-      <img src="../src/assets/images/icon-frontend-mentor.svg" alt="Icon Frontend-Mentor">
-      <img src="../src/assets/images/icon-linkedin.svg" alt="Icon LinkedIn">
-      <img src="../src/assets/images/icon-twitter.svg" alt="Icon Twitter">
+    
+    <div class="mb-[60px] w-[47%] flex flex-col justify-center items-center m-auto">
+      <h1 class="font-bold text-2xl px-3 py-5">adamkeyes</h1>
+      <div class="flex justify-between gap-6 items-center w-full px-2.5">
+        <img src="../src/assets/images/icon-github.svg" alt="Icon GitHub">
+        <img src="../src/assets/images/icon-frontend-mentor.svg" alt="Icon Frontend-Mentor">
+        <img src="../src/assets/images/icon-linkedin.svg" alt="Icon LinkedIn">
+        <img src="../src/assets/images/icon-twitter.svg" alt="Icon Twitter">
+      </div>
     </div>
+
   </footer>
 
 </body>
