Working on  mobile version styles

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
 
     <div class="mt-[300px]">
       <h2 class="px-4 pt-10 pb-6 font-bold text-center text-[40px] leading-[40px] tracking-[-1.14px]">Nice to meet you! I'm <span class="border-b-4 border-neon_green">Adam Keyes</span>.</h2>
-      <p class="px-4 pb-6 text-center leading-[26px]">
+      <p class="px-4 pb-6 text-center leading-[26px] text-grey">
         Based in the UK, I'm a front-end developer passionate about
         building accessible web apps that users love.
       </p>
@@ -169,7 +169,7 @@
           <p>CSS</p>
           <p>JavaScript</p>
         </div>
-        <div class="pt-5 pb-10 flex justify-start gap-[30px]">
+        <div class="pt-5 pb-20 flex justify-start gap-[30px]">
           <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Project</button>
           <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Code</button>
         </div>
@@ -179,8 +179,8 @@
 
   <footer class="bg-dark_gray">
     <section>
-      <h2>Contact</h2>
-      <p>
+      <h2 class="font-bold text-center text-[40px] leading-[40px] tracking-[-1.14px] pt-[60px]">Contact</h2>
+      <p class="px-4 pb-[50px] pt-5 text-center leading-[26px] text-grey">
         I would love to hear about your project and how I could help. Please
         fill in the form, and I’ll get back to you as soon as possible.
       </p>
