--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="output.css">
+  <link rel="stylesheet" href="style.css">
   <script src="script.js" defer></script>
   
   <title>Frontend Mentor | Single-page developer portfolio</title>
@@ -18,10 +19,10 @@
     <div class="flex flex-col justify-center items-center m-auto w-[47%] relative">
       <h1 class="font-bold text-2xl px-3 py-5">adamkeyes</h1>
       <div class="flex justify-between gap-6 items-center w-full px-2.5">
-        <img src="../src/assets/images/icon-github.svg" alt="Icon GitHub">
-        <img src="../src/assets/images/icon-frontend-mentor.svg" alt="Icon Frontend-Mentor">
-        <img src="../src/assets/images/icon-linkedin.svg" alt="Icon LinkedIn">
-        <img src="../src/assets/images/icon-twitter.svg" alt="Icon Twitter">
+        <a href="#" class="cursor-pointer"><img src="../src/assets/images/icon-github.svg" alt="Icon GitHub"></a>
+        <a href="#" class="cursor-pointer"><img src="../src/assets/images/icon-frontend-mentor.svg" alt="Icon Frontend-Mentor"></a>
+        <a href="#" class="cursor-pointer"><img src="../src/assets/images/icon-linkedin.svg" alt="Icon LinkedIn"></a>
+        <a href="#" class="cursor-pointer"><img src="../src/assets/images/icon-twitter.svg" alt="Icon Twitter"></a>
       </div>
       <div class="z-20">
         <img class="md:hidden xl:hidden absolute top-0 left-1/2 translate-x-[-50%] z-20" src="../src/assets/images/image-profile-mobile.webp" alt="Adam Keyes">
