Working on styles

--- a/src/index.html
+++ b/src/index.html
@@ -202,11 +202,11 @@
     
     <div class="mb-[60px] flex flex-col justify-center items-center m-auto mt-10 border-t-2 px-4">
       <h1 class="font-bold text-2xl px-3 py-5">adamkeyes</h1>
-      <div class="flex justify-between gap-6 items-center w-full px-2.5">
-        <img src="../src/assets/images/icon-github.svg" alt="Icon GitHub">
-        <img src="../src/assets/images/icon-frontend-mentor.svg" alt="Icon Frontend-Mentor">
-        <img src="../src/assets/images/icon-linkedin.svg" alt="Icon LinkedIn">
-        <img src="../src/assets/images/icon-twitter.svg" alt="Icon Twitter">
+      <div class="flex justify-between gap-6 items-center px-2.5 w-[47%]">
+        <a href="#" class="cursor-pointer"><img src="../src/assets/images/icon-github.svg" alt="Icon GitHub"></a>
+        <a href="#" class="cursor-pointer"><img src="../src/assets/images/icon-frontend-mentor.svg" alt="Icon Frontend-Mentor"></a>
+        <a href="#" class="cursor-pointer"><img src="../src/assets/images/icon-linkedin.svg" alt="Icon LinkedIn"></a>
+        <a href="#" class="cursor-pointer"><img src="../src/assets/images/icon-twitter.svg" alt="Icon Twitter"></a>
       </div>
     </div>
 
