--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
         <a href="#" class="cursor-pointer"><img src="../src/assets/images/icon-twitter.svg" alt="Icon Twitter"></a>
       </div>
       <div class="z-20">
-        <img class="md:hidden xl:hidden absolute top-0 left-1/2 translate-x-[-50%] z-20" src="../src/assets/images/image-profile-mobile.webp" alt="Adam Keyes">
+        <img class="md:hidden xl:hidden absolute top-0 left-1/2 translate-x-[-50%] z-20 pointer-events-none" src="../src/assets/images/image-profile-mobile.webp" alt="Adam Keyes">
         <img class="hidden md:block xl:hidden" src="../src/assets/images/image-profile-tablet.webp" alt="Adam Keyes">
         <img class="hidden md:hidden xl:block" src="../src/assets/images/image-profile-desktop.webp" alt="Adam Keyes">
       </div>
