--- a/src/index.html
+++ b/src/index.html
@@ -13,21 +13,21 @@
   
   <title>Frontend Mentor | Single-page developer portfolio</title>
 </head>
-<body class="font-Space_Grotesk bg-dark_black text-pure_white flex flex-col justify-center items-center m-auto">
+<body class="font-Space_Grotesk bg-dark_black text-pure_white flex flex-col justify-center items-center m-auto lg:px-[165px]">
 
-  <header class="flex flex-col justify-center items-center m-auto relative">
-    <div class="flex flex-col justify-center items-center m-auto w-[47%] relative">
-      <h1 class="font-bold text-2xl px-3 py-5">adamkeyes</h1>
-      <div class="flex justify-between gap-6 items-center w-full px-2.5">
-        <a href="#" class="cursor-pointer"><img src="../src/assets/images/icon-github.svg" alt="Icon GitHub"></a>
-        <a href="#" class="cursor-pointer"><img src="../src/assets/images/icon-frontend-mentor.svg" alt="Icon Frontend-Mentor"></a>
-        <a href="#" class="cursor-pointer"><img src="../src/assets/images/icon-linkedin.svg" alt="Icon LinkedIn"></a>
-        <a href="#" class="cursor-pointer"><img src="../src/assets/images/icon-twitter.svg" alt="Icon Twitter"></a>
+  <header class="flex flex-col justify-center items-center m-auto relative md:px-[30px]">
+    <div class="flex flex-col justify-center items-center m-auto w-[47%] relative md:w-full">
+      <div class="md:flex md:justify-between md:w-screen md:m-auto">
+        <h1 class="font-bold text-2xl px-3 py-5">adamkeyes</h1>
+        <div class="flex justify-between gap-6 items-center w-full px-2.5 md:justify-end">
+          <a href="#" class="cursor-pointer"><img src="../src/assets/images/icon-github.svg" alt="Icon GitHub"></a>
+          <a href="#" class="cursor-pointer"><img src="../src/assets/images/icon-frontend-mentor.svg" alt="Icon Frontend-Mentor"></a>
+          <a href="#" class="cursor-pointer"><img src="../src/assets/images/icon-linkedin.svg" alt="Icon LinkedIn"></a>
+          <a href="#" class="cursor-pointer"><img src="../src/assets/images/icon-twitter.svg" alt="Icon Twitter"></a>
+        </div>
       </div>
       <div class="z-20">
         <img class="md:hidden xl:hidden absolute top-0 left-1/2 translate-x-[-50%] z-20 pointer-events-none" src="../src/assets/images/image-profile-mobile.webp" alt="Adam Keyes">
-        <img class="hidden md:block xl:hidden" src="../src/assets/images/image-profile-tablet.webp" alt="Adam Keyes">
-        <img class="hidden md:hidden xl:block" src="../src/assets/images/image-profile-desktop.webp" alt="Adam Keyes">
       </div>
     </div>
 
@@ -39,14 +39,20 @@
       <img class="absolute bottom-[40%] right-[-20%] overflow-x-hidden" src="../src/assets/images/pattern-circle.svg" alt="Pattern Circle">
     </div>
 
-    <div class="mt-[300px]">
-      <h2 class="px-4 pt-10 pb-6 font-bold text-center text-[40px] leading-[40px] tracking-[-1.14px]">Nice to meet you! I'm <span class="border-b-4 border-neon_green">Adam Keyes</span>.</h2>
-      <p class="px-4 pb-6 text-center leading-[26px] text-grey">
-        Based in the UK, I'm a front-end developer passionate about
-        building accessible web apps that users love.
-      </p>
-      <div class="flex justify-center">
-        <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">Contact me</button>
+    <div class="mt-[300px] md:mt-0 md:flex md:flex-row-reverse">
+      <div class="hidden md:block">
+        <img class="hidden md:block xl:hidden" src="../src/assets/images/image-profile-tablet.webp" alt="Adam Keyes">
+        <img class="hidden md:hidden xl:block" src="../src/assets/images/image-profile-desktop.webp" alt="Adam Keyes">
+      </div>
+      <div>
+        <h2 class="px-4 pt-10 pb-6 font-bold text-center text-[40px] leading-[40px] tracking-[-1.14px]">Nice to meet you! I'm <span class="border-b-4 border-neon_green">Adam Keyes</span>.</h2>
+        <p class="px-4 pb-6 text-center leading-[26px] text-grey">
+          Based in the UK, I'm a front-end developer passionate about
+          building accessible web apps that users love.
+        </p>
+        <div class="flex justify-center">
+          <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">Contact me</button>
+      </div>
       </div>
     </div>
 
@@ -93,88 +99,90 @@
           <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">Contact me</button>
         </div>
       </div>
-      <article>
-        <img class="lg:hidden" src="../src/assets/images/thumbnail-project-1-small.webp" alt="Thumbnail Project">
-        <img class="hidden lg:block" src="../src/assets/images/thumbnail-project-1-large.webp" alt="Thumbnail Project">
-        <h3 class="uppercase font-bold text-2xl leading-[32px] mt-5">Design portfolio</h3>
-        <div class="flex gap-[18px] text-lg leading-[28px] uppercase">
-          <p>HTML</p>
-          <p>CSS</p>
-        </div>
-        <div class="pt-5 pb-10 flex justify-start gap-[30px]">
-          <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Project</button>
-          <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Code</button>
-        </div>
-      </article>
-      <article>
-        <img class="lg:hidden" src="../src/assets/images/thumbnail-project-2-small.webp" alt="Thumbnail Project">
-        <img class="hidden lg:block" src="../src/assets/images/thumbnail-project-2-large.webp" alt="Thumbnail Project">
-        <h3 class="uppercase font-bold text-2xl leading-[32px] mt-5">E-learning landing page</h3>
-        <div class="flex gap-[18px] text-lg leading-[28px] uppercase">
-          <p>HTML</p>
-          <p>CSS</p>
-        </div>
-        <div class="pt-5 pb-10 flex justify-start gap-[30px]">
-          <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Project</button>
-          <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Code</button>
-        </div>
-      </article>
-      <article>
-        <img class="lg:hidden" src="../src/assets/images/thumbnail-project-3-small.webp" alt="Thumbnail Project">
-        <img class="hidden lg:block" src="../src/assets/images/thumbnail-project-3-large.webp" alt="Thumbnail Project">
-        <h3 class="uppercase font-bold text-2xl leading-[32px] mt-5">Todo web app</h3>
-        <div class="flex gap-[18px] text-lg leading-[28px] uppercase">
-          <p>HTML</p>
-          <p>CSS</p>
-          <p>JavaScript</p>
-        </div>
-        <div class="pt-5 pb-10 flex justify-start gap-[30px]">
-          <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Project</button>
-          <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Code</button>
-        </div>
-      </article>
-      <article>
-        <img class="lg:hidden" src="../src/assets/images/thumbnail-project-4-small.webp" alt="Thumbnail Project">
-        <img class="hidden lg:block" src="../src/assets/images/thumbnail-project-4-large.webp" alt="Thumbnail Project">
-        <h3 class="uppercase font-bold text-2xl leading-[32px] mt-5">Entertainment web app</h3>
-        <div class="flex gap-[18px] text-lg leading-[28px] uppercase">
-          <p>HTML</p>
-          <p>CSS</p>
-          <p>JavaScript</p>
-        </div>
-        <div class="pt-5 pb-10 flex justify-start gap-[30px]">
-          <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Project</button>
-          <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Code</button>
-        </div>
-      </article>
-      <article>
-        <img class="lg:hidden" src="../src/assets/images/thumbnail-project-5-small.webp" alt="Thumbnail Project">
-        <img class="hidden lg:block" src="../src/assets/images/thumbnail-project-5-large.webp" alt="Thumbnail Project">
-        <h3 class="uppercase font-bold text-2xl leading-[32px] mt-5">Memory Game</h3>
-        <div class="flex gap-[18px] text-lg leading-[28px] uppercase">
-          <p>HTML</p>
-          <p>CSS</p>
-          <p>JavaScript</p>
-        </div>
-        <div class="pt-5 pb-10 flex justify-start gap-[30px]">
-          <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Project</button>
-          <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Code</button>
-        </div>
-      </article>
-      <article>
-        <img class="lg:hidden" src="../src/assets/images/thumbnail-project-6-small.webp" alt="Thumbnail Project">
-        <img class="hidden lg:block" src="../src/assets/images/thumbnail-project-6-large.webp" alt="Thumbnail Project">
-        <h3 class="uppercase font-bold text-2xl leading-[32px] mt-5">Art gallery showcase</h3>
-        <div class="flex gap-[18px] text-lg leading-[28px] uppercase">
-          <p>HTML</p>
-          <p>CSS</p>
-          <p>JavaScript</p>
-        </div>
-        <div class="pt-5 pb-20 flex justify-start gap-[30px]">
-          <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Project</button>
-          <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Code</button>
-        </div>
-      </article>
+      <div class="md:grid md:grid-cols-2 md:gap-[22px]">
+        <article>
+          <img class="lg:hidden" src="../src/assets/images/thumbnail-project-1-small.webp" alt="Thumbnail Project">
+          <img class="hidden lg:block" src="../src/assets/images/thumbnail-project-1-large.webp" alt="Thumbnail Project">
+          <h3 class="uppercase font-bold text-2xl leading-[32px] mt-5">Design portfolio</h3>
+          <div class="flex gap-[18px] text-lg leading-[28px] uppercase">
+            <p>HTML</p>
+            <p>CSS</p>
+          </div>
+          <div class="pt-5 pb-10 flex justify-start gap-[30px]">
+            <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Project</button>
+            <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Code</button>
+          </div>
+        </article>
+        <article>
+          <img class="lg:hidden" src="../src/assets/images/thumbnail-project-2-small.webp" alt="Thumbnail Project">
+          <img class="hidden lg:block" src="../src/assets/images/thumbnail-project-2-large.webp" alt="Thumbnail Project">
+          <h3 class="uppercase font-bold text-2xl leading-[32px] mt-5">E-learning landing page</h3>
+          <div class="flex gap-[18px] text-lg leading-[28px] uppercase">
+            <p>HTML</p>
+            <p>CSS</p>
+          </div>
+          <div class="pt-5 pb-10 flex justify-start gap-[30px]">
+            <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Project</button>
+            <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Code</button>
+          </div>
+        </article>
+        <article>
+          <img class="lg:hidden" src="../src/assets/images/thumbnail-project-3-small.webp" alt="Thumbnail Project">
+          <img class="hidden lg:block" src="../src/assets/images/thumbnail-project-3-large.webp" alt="Thumbnail Project">
+          <h3 class="uppercase font-bold text-2xl leading-[32px] mt-5">Todo web app</h3>
+          <div class="flex gap-[18px] text-lg leading-[28px] uppercase">
+            <p>HTML</p>
+            <p>CSS</p>
+            <p>JavaScript</p>
+          </div>
+          <div class="pt-5 pb-10 flex justify-start gap-[30px]">
+            <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Project</button>
+            <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Code</button>
+          </div>
+        </article>
+        <article>
+          <img class="lg:hidden" src="../src/assets/images/thumbnail-project-4-small.webp" alt="Thumbnail Project">
+          <img class="hidden lg:block" src="../src/assets/images/thumbnail-project-4-large.webp" alt="Thumbnail Project">
+          <h3 class="uppercase font-bold text-2xl leading-[32px] mt-5">Entertainment web app</h3>
+          <div class="flex gap-[18px] text-lg leading-[28px] uppercase">
+            <p>HTML</p>
+            <p>CSS</p>
+            <p>JavaScript</p>
+          </div>
+          <div class="pt-5 pb-10 flex justify-start gap-[30px]">
+            <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Project</button>
+            <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Code</button>
+          </div>
+        </article>
+        <article>
+          <img class="lg:hidden" src="../src/assets/images/thumbnail-project-5-small.webp" alt="Thumbnail Project">
+          <img class="hidden lg:block" src="../src/assets/images/thumbnail-project-5-large.webp" alt="Thumbnail Project">
+          <h3 class="uppercase font-bold text-2xl leading-[32px] mt-5">Memory Game</h3>
+          <div class="flex gap-[18px] text-lg leading-[28px] uppercase">
+            <p>HTML</p>
+            <p>CSS</p>
+            <p>JavaScript</p>
+          </div>
+          <div class="pt-5 pb-10 flex justify-start gap-[30px]">
+            <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Project</button>
+            <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Code</button>
+          </div>
+        </article>
+        <article>
+          <img class="lg:hidden" src="../src/assets/images/thumbnail-project-6-small.webp" alt="Thumbnail Project">
+          <img class="hidden lg:block" src="../src/assets/images/thumbnail-project-6-large.webp" alt="Thumbnail Project">
+          <h3 class="uppercase font-bold text-2xl leading-[32px] mt-5">Art gallery showcase</h3>
+          <div class="flex gap-[18px] text-lg leading-[28px] uppercase">
+            <p>HTML</p>
+            <p>CSS</p>
+            <p>JavaScript</p>
+          </div>
+          <div class="pt-5 pb-20 flex justify-start gap-[30px]">
+            <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Project</button>
+            <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">View Code</button>
+          </div>
+        </article>
+      </div>
     </section>
   </main>
 
