Working on tablet version

--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
   </header>
 
   <main class="mt-[90px] mx-4 border-t-2">
-    <section class="text-center">
+    <section class="text-center md:grid md:grid-cols-2 lg:grid-cols-3">
       <div class="pt-10">
         <h2 class="font-bold text-[32px] leading-[40px] tracking-[-1px]">HTML</h2>
         <p class="leading-[26px]">4 Years Experience</p>
@@ -82,7 +82,7 @@
       </div>
       <div class="pt-6">
         <h2 class="font-bold text-[32px] leading-[40px] tracking-[-1px]">Sass</h2>
-        <p class="leading-[26px] pb-10 border-b-2">3 Years Experience</p>
+        <p class="leading-[26px] pb-10 border-b-2 md:border-b-transparent">3 Years Experience</p>
       </div>
     </section>
 
@@ -187,7 +187,7 @@
   </main>
 
   <footer class="bg-dark_gray">
-    <section>
+    <section class="md:px-[160px]">
       <h2 class="font-bold text-center text-[40px] leading-[40px] tracking-[-1.14px] pt-[60px]">Contact</h2>
       <p class="px-4 pb-[50px] pt-5 text-center leading-[26px] text-grey">
         I would love to hear about your project and how I could help. Please
@@ -208,9 +208,9 @@
       <img class="absolute left-[-50%] top-[-210px] z-10" src="../src/assets/images/pattern-rings.svg" alt="Pattern Rings">
     </div>
     
-    <div class="mb-[60px] flex flex-col justify-center items-center m-auto mt-10 border-t-2 px-4">
+    <div class="mb-[60px] flex flex-col justify-center items-center m-auto mt-10 border-t-2 px-4 md:flex-row">
       <h1 class="font-bold text-2xl px-3 py-5">adamkeyes</h1>
-      <div class="flex justify-between gap-6 items-center px-2.5 w-[47%]">
+      <div class="flex justify-between gap-6 items-center px-2.5 w-[47%] md:w-full md:justify-end">
         <a href="#" class="cursor-pointer"><img src="../src/assets/images/icon-github.svg" alt="Icon GitHub"></a>
         <a href="#" class="cursor-pointer"><img src="../src/assets/images/icon-frontend-mentor.svg" alt="Icon Frontend-Mentor"></a>
         <a href="#" class="cursor-pointer"><img src="../src/assets/images/icon-linkedin.svg" alt="Icon LinkedIn"></a>
