Working on tablet version

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     <div class="flex flex-col justify-center items-center m-auto w-[47%] relative md:w-full">
       <div class="md:flex md:justify-between md:w-screen md:m-auto">
         <h1 class="font-bold text-2xl px-3 py-5">adamkeyes</h1>
-        <div class="flex justify-between gap-6 items-center w-full px-2.5 md:justify-end">
+        <div class="flex justify-between gap-6 items-center w-full px-2.5 md:justify-end md:mr-11">
           <a href="#" class="cursor-pointer"><img src="../src/assets/images/icon-github.svg" alt="Icon GitHub"></a>
           <a href="#" class="cursor-pointer"><img src="../src/assets/images/icon-frontend-mentor.svg" alt="Icon Frontend-Mentor"></a>
           <a href="#" class="cursor-pointer"><img src="../src/assets/images/icon-linkedin.svg" alt="Icon LinkedIn"></a>
@@ -41,11 +41,11 @@
 
     <div class="mt-[300px] md:mt-0 md:flex md:flex-row-reverse">
       <div class="hidden md:block">
-        <img class="hidden md:block xl:hidden" src="../src/assets/images/image-profile-tablet.webp" alt="Adam Keyes">
+        <img class="hidden md:block xl:hidden mt-[-80px]" src="../src/assets/images/image-profile-tablet.webp" alt="Adam Keyes">
         <img class="hidden md:hidden xl:block" src="../src/assets/images/image-profile-desktop.webp" alt="Adam Keyes">
       </div>
       <div>
-        <h2 class="px-4 pt-10 pb-6 font-bold text-center text-[40px] leading-[40px] tracking-[-1.14px]">Nice to meet you! I'm <span class="border-b-4 border-neon_green">Adam Keyes</span>.</h2>
+        <h2 class="px-4 pt-10 pb-6 font-bold text-center text-[40px] leading-[40px] tracking-[-1.14px] md:text-7xl lg:text-[88px]">Nice to meet you! I'm <span class="border-b-4 border-neon_green">Adam Keyes</span>.</h2>
         <p class="px-4 pb-6 text-center leading-[26px] text-grey">
           Based in the UK, I'm a front-end developer passionate about
           building accessible web apps that users love.
