Working on tablet version

--- a/src/index.html
+++ b/src/index.html
@@ -40,17 +40,17 @@
     </div>
 
     <div class="mt-[300px] md:mt-0 md:flex md:flex-row-reverse">
-      <div class="hidden md:block">
-        <img class="hidden md:block xl:hidden mt-[-80px]" src="../src/assets/images/image-profile-tablet.webp" alt="Adam Keyes">
+      <div class="hidden md:block md:mr-[-190px]">
+        <img class="hidden md:block xl:hidden mt-[-80px] w-[60%]" src="../src/assets/images/image-profile-tablet.webp" alt="Adam Keyes">
         <img class="hidden md:hidden xl:block" src="../src/assets/images/image-profile-desktop.webp" alt="Adam Keyes">
       </div>
-      <div>
-        <h2 class="px-4 pt-10 pb-6 font-bold text-center text-[40px] leading-[40px] tracking-[-1.14px] md:text-7xl lg:text-[88px]">Nice to meet you! I'm <span class="border-b-4 border-neon_green">Adam Keyes</span>.</h2>
-        <p class="px-4 pb-6 text-center leading-[26px] text-grey">
+      <div class="md:relative md:z-40 md:w-[65%] md:ml-auto md:mr-[-80px]">
+        <h2 class="px-4 pt-10 pb-6 font-bold text-center text-[40px] leading-[40px] tracking-[-1.14px] md:text-7xl lg:text-[88px] md:text-left">Nice to meet you! I'm <span class="border-b-4 border-neon_green">Adam Keyes</span>.</h2>
+        <p class="px-4 pb-6 text-center leading-[26px] text-grey md:text-left md:mt-[43px] md:mb-[34px]">
           Based in the UK, I'm a front-end developer passionate about
           building accessible web apps that users love.
         </p>
-        <div class="flex justify-center">
+        <div class="flex justify-center md:justify-start px-4">
           <button class="uppercase font-bold text-center leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pb-2.5">Contact me</button>
       </div>
       </div>
