--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
 
   </header>
 
-  <main class="mt-[90px] mx-4 border-t-2">
+  <main class="mt-[90px] mx-4 border-t-2 md:mt-10">
     <section class="text-center md:grid md:grid-cols-2 lg:grid-cols-3">
       <div class="pt-10">
         <h2 class="font-bold text-[32px] leading-[40px] tracking-[-1px]">HTML</h2>
@@ -87,7 +87,7 @@
     </section>
 
     <div class="relative">
-      <img class="absolute right-[-50%] top-[-50px] z-10" src="../src/assets/images/pattern-rings.svg" alt="Pattern Rings">
+      <img class="absolute right-[-50%] top-[-50px] z-10 md:top-[-80px]" src="../src/assets/images/pattern-rings.svg" alt="Pattern Rings">
     </div>
 
     <section class="mt-14">
@@ -205,7 +205,7 @@
     </section>
 
     <div class="relative">
-      <img class="absolute left-[-50%] top-[-210px] z-10" src="../src/assets/images/pattern-rings.svg" alt="Pattern Rings">
+      <img class="absolute left-[-50%] top-[-210px] z-10 md:top-[-150px]" src="../src/assets/images/pattern-rings.svg" alt="Pattern Rings">
     </div>
     
     <div class="mb-[60px] flex flex-col justify-center items-center m-auto mt-10 border-t-2 px-4 md:flex-row">
