Working on mobile version

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
     </div>
 
     <div>
-      <img class="absolute bottom-[40%] right-[-20%] overflow-x-hidden" src="../src/assets/images/pattern-circle.svg" alt="Pattern Circle">
+      <img class="absolute bottom-[40%] right-[-20%] overflow-x-hidden md:right-0 md:bottom-0 lg:right-[50%] lg:bottom-28" src="../src/assets/images/pattern-circle.svg" alt="Pattern Circle">
     </div>
 
     <div class="mt-[300px] md:mt-0 md:flex md:flex-row-reverse">
@@ -187,7 +187,7 @@
   </main>
 
   <footer class="bg-dark_gray">
-    <section class="md:px-[160px]">
+    <section class="md:mx-[160px]">
       <h2 class="font-bold text-center text-[40px] leading-[40px] tracking-[-1.14px] pt-[60px]">Contact</h2>
       <p class="px-4 pb-[50px] pt-5 text-center leading-[26px] text-grey">
         I would love to hear about your project and how I could help. Please
