Finish the form validation

--- a/src/index.html
+++ b/src/index.html
@@ -196,10 +196,13 @@
         </p>
       </div>
       <div class="lg:w-[55%]">
-        <form class="px-4">
+        <form id="form" class="px-4">
           <input class="bg-dark_gray placeholder:uppercase border-b-2 py-4 px-6 w-full lg:pt-0" type="text" name="name" id="name" placeholder="Name" required>
-          <input class="bg-dark_gray placeholder:uppercase border-b-2 py-4 px-6 w-full" type="email" name="email" id="email" placeholder="Email" required>
-          <span class="text-red text-right font-medium text-xm w-full block pt-[5px]" id="errorBox"></span>
+          <div class="relative">
+            <input class="bg-dark_gray placeholder:uppercase border-b-2 py-4 px-6 w-full" type="email" name="email" id="email" placeholder="Email" required>
+            <span class="text-red text-right font-medium text-xm w-full block pt-[5px]" id="errorBox"></span>
+            <span class="text-red border border-red rounded-full w-6 h-6 p-[9px] text-center items-center absolute top-4 right-0 hidden" id="errorAlert">!</span>
+          </div>
           <textarea class="bg-dark_gray placeholder:uppercase border-b-2 py-4 px-6 w-full" name="text" id="text" cols="30" rows="5" placeholder="Message"></textarea>
           <div class="flex justify-end mb-[87px] lg:mb-[67px]">
             <button class="uppercase font-bold leading-[26px] tracking-[2.29px] border-b-2 border-neon_green hover:text-neon_green pt-8 pb-2.5" id="btnSubmit" type="submit">Send message</button>
